--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "mongodb": "^3.6.3",
     "next": "^10.0.0",
+    "next-connect": "^0.9.1",
     "react": "16.13.1",
+    "react-color": "^2.19.3",
     "react-dom": "16.13.1"
   }
 }
