--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "mongodb": "^3.6.3",
+    "mongoose": "^5.10.13",
     "next": "^10.0.0",
     "next-connect": "^0.9.1",
     "react": "16.13.1",
