--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "mongodb": "^3.6.3",
     "mongoose": "^5.10.13",
     "next": "^10.0.0",
