--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.10.13",
     "next": "^10.0.0",
